# zipfiles

./: .clang-format  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Readme.md  directory_sample.json  docker-compose.yml  index.html  perf.data  perf.data.old  temp.cpp
config/: client.log.properties  config.json  server.log.properties
demo/: Dockerfile  demo.cpp  docker-compose.yml  download.sh  script  sources.list  storybook.txt
doc/: 20241002更新计划.md  修改意见.md  通信.md
gui/: .editorconfig  .eslintignore  .eslintrc.js  .npmrc  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.js  Readme.md  babel.config.js  commitlint.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json
gui/doc/: Explorer组件设计.md  HTML5页面模块.md  整体架构.md
gui/mock/: index.js  utils.js
gui/mock/controller/: user.js
gui/public/: index.html  test.html
gui/src/: App.tsx  app.less  dev.tsx  global.d.ts  images.d.ts  index.tsx  prod.tsx  router.tsx  styles.less
gui/src/apis/: Connect.ts  CreateNullFolder.ts  GetAllFileDetails.ts  GetCommitDetail.ts  GetCommitList.ts  GetCommitRecycleBin.ts  GetFileDetail.ts  GetFileDetailList.ts  GetFileList.ts  LogicDeleteCommit.ts  MockManyNotifications.ts  PhysicalDeleteCommit.ts  PostBackup.ts  PostCommit.ts  ReadConfig.ts  RecoverCommit.ts  Restore.ts  Sum.ts  UpdateConfig.ts  add.ts  getVersion.ts  index.ts  info.ts  log.ts  warn.ts
gui/src/apis/mock/: CreateNullFolder.ts  GetAllFileDetails.ts  GetCommitDetail.ts  GetCommitList.ts  GetCommitRecycleBin.ts  GetFileDetail.ts  GetFileDetailList.ts  GetFileList.ts  LogicDeleteCommit.ts  PhysicalDeleteCommit.ts  PostCommit.ts  ReadConfig.ts  RecoverCommit.ts  Restore.ts  UpdateConfig.ts  const.ts  (+4 more)
gui/src/components/: BackUpBuffer.tsx  EmptyList.tsx  Fallback.tsx  LoadingSpinner.tsx  LoadingWrapper.tsx  NoMoreData.tsx  NotFound.tsx  Router.tsx  TypeWriter.tsx
gui/src/contexts/: globalContext.tsx
gui/src/hooks/: useApi.tsx  useDilute.ts  useGlobalMessageHandler.ts  useLog.ts  useStateProvider.tsx
gui/src/layouts/: EntryLayout.tsx  FootContent.tsx
gui/src/pages/: ExplorerPage.tsx  IndexPage.tsx  TestPage.tsx
gui/src/router/: router.tsx
gui/src/stores/: CommitListReducer.ts  CreateCommitReducer.ts  NotificationReducer.ts  SocketReducer.ts  provider.tsx  store.ts
gui/src/types/: global.d.ts  images.d.ts  index.ts
gui/src/utils/: index.ts  mq.ts
gui/test/: karma.conf.js  tsconfig.test.json
gui/test/jest/: jest.config.js  utils.spec.ts
include/: common.h  copyfile.h  huffman.h  lz77.h  utils.h
include/client/: api.h  client.h  launcher.h  request.h  socket.h  ui.h  view.h  window.h
include/mp/: GetFileDetail.h  GetFileList.h  Notification.h  Request.h  Response.h  common.h  dto.h  error.h  filter.h  mp.h
include/mp/apis/: CreateNullFolder.h  GetCommitDetail.h  GetCommitList.h  GetCommitRecycleBin.h  GetFileDetail.h  GetFileDetailList.h  GetFileList.h  LogicDeleteCommit.h  MockManyNotifications.h  MockNeedTime.h  PhysicalDeleteCommit.h  PostCommit.h  RecoverCommit.h  Restore.h
include/mq/: GetFileList.h  MQWrapper.h  mq.h
include/server/: acceptor.h  backup.h  error.h  handler.h  list.h  selector.h  unittest_constant.h
include/server/api/: api.h
include/server/backup/: backup.h
include/server/configure/: configure.h
include/server/crypto/: crypto.h  decrypt.h  encrypt.h
include/server/deflate/: huffman.h  lz77.h  zip.h
include/server/pack/: pack.h  unpack.h
include/server/recover/: recover.h
include/server/restore/: restore.h
include/server/socket/: api.h  handler.h  selector.h  socket.h
include/server/tools/: committable.h  filter.h  fsapi.h  md5.h  threadpool.h
release_script/: install.sh  start.sh  uninstall.sh
script/: download.sh  generate_api.py  make_package.py  perf.md
service/dev/: Dockerfile
src/: backup.cpp  copyfile.cpp  huffman.cpp  log4cpp.properties  lz77.cpp  main.cpp  utils.cpp
src/client/: api.cpp  client.cpp  launcher.cpp  main.cpp  request.cpp  socket.cpp  ui.cpp  view.cpp  window.cpp
src/entry/: client.cpp  server.cpp
src/mp/: GetFileDetail.cpp  GetFileList.cpp  Notification.cpp  Request.cpp  Response.cpp  filter.cpp  mp.cpp
src/mp/apis/: GetCommitDetail.cpp  GetCommitList.cpp  GetFileDetail.cpp  GetFileDetailList.cpp  GetFileList.cpp  PostCommit.cpp
src/mq/: GetFileList.cpp  MQWrapper.cpp
src/server/: acceptor.cpp  api.cpp  backup.cpp  handler.cpp  list.cpp  server.cpp
src/server/api/: api.cpp
src/server/backup/: backup.cpp
src/server/configure/: configure.cpp
src/server/crypto/: crypto.cpp  decrypt.cpp  encrypt.cpp
src/server/deflate/: huffman.cpp  lz77.cpp  zip.cpp
src/server/pack/: pack.cpp  unpack.cpp
src/server/recover/: recover.cpp
src/server/restore/: restore.cpp
src/server/socket/: acceptor.cpp  handler.cpp  selector.cpp  socket.cpp
src/server/tools/: committable.cpp  filter.cpp  fsapi.cpp  md5.cpp  threadpool.cpp
src/test/: mq_test_client.cpp  mq_test_server.cpp
tests/mock/: mock.cpp  selector.cpp
tests/server/: current_work_path.cpp  remove_all_test.cpp  tools.h
tests/server/GetCommitDetail/: typeTransform.cpp
tests/server/backup_and_restore/: single_thread_backup_and_restore.cpp  two_threads_different_files_backup_and_restore.cpp  two_threads_same_files_backup_and_restore.cpp
tests/server/commit_table/: delete_and_remove_commit_record.cpp  get_commit_record_by_id.cpp  read_and_write_commit_table.cpp
tests/server/connection/: QPS.cpp
tests/server/crypto/: encrypt_and_decrypt_big.cpp  encrypt_and_decrypt_small.cpp
tests/server/pack/: pack_and_unpack_multi.cpp  pack_and_unpack_single.cpp
tests/server/zip/: zip_and_unzip_big.cpp  zip_and_unzip_multithread.cpp  zip_and_unzip_small.cpp
tests/unittest/: copyfile.cpp  utils.cpp
tests/unittest/copyfile/: example1.txt
tests/unittest/server/: backup.cpp  backup_and_restore.cpp  backup_and_restore_1.cpp  backup_and_restore_2.cpp  backup_and_restore_3.cpp  commitTable.cpp  commitlog.cpp  commitlog_all.cpp  crypto.cpp  directory.cpp  list.cpp  pack.cpp  parseJson.cpp  zip.cpp
(+94 files in other folders)
